Add sass files for typography elements

--- a/themusescircle/dev/themes/themusescircle/assets/scss/_base.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_base.scss
@@ -12,3 +12,15 @@ h1, h2, h3, h4, h5, h6, p, blockquote, ol, ul, dl, dd {
 a {
 	text-decoration: none;
 }
+
+/* Base styles
+========================================================================== */
+
+html, body {
+	width: 100%;
+	min-height: 100%; 
+}
+
+body { 
+	height: 100%; 	
+}
