--- a/themusescircle/dev/themes/themusescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_variables.scss
@@ -3,6 +3,20 @@
 
 $assets: '../themusescircle/assets';
 $fonts: $assets + '/fonts/';
+$images: $assets + '/images/';
+
+/* Colors
+========================================================================== */
+
+$color-01: #fff; // white
+$color-02: #000; // black
+$color-03: #100a16; // dark purple
+$color-04: #191020; // medium purple
+$color-05: #421031; // dark pink
+$color-06: #722558; // medium pink
+$color-07: #b24b8f; // light pink
+$color-08: #411032; // medium pink
+$color-09: #23081b; // dark pink
 
 /* Fonts
 ========================================================================== */
