--- a/themusescircle/dev/themes/themusescircle/assets/scss/_base.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_base.scss
@@ -22,5 +22,28 @@ html, body {
 }
 
 body { 
-	height: 100%; 	
+	height: 100%;
+	background: $color-03; 	
+}
+
+a {
+    @include transition(color, 0.3s, ease-in-out);
+}
+
+.wrapper {
+	margin: 0 auto;
+	max-width: 1320px;
+	width: auto;
+	padding: 0 20px;
+}
+
+.cf {
+	&:before, &:after {
+		content: '';
+		display: table;
+		zoom: 1;
+	}
+	&:after {
+		clear: both;
+	}
 }
