--- a/themusescircle/dev/themes/themusescircle/assets/scss/_typography.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_typography.scss
@@ -66,9 +66,9 @@
 
 @font-face {
     font-family: 'Font Awesome';
-    src: url($fonts + 'fontawesome.woff2') format('woff2'),
-         url($fonts + 'fontawesome.woff') format('woff'),
-         url($fonts + 'fontawesome.ttf') format('truetype');
+    src: url($fonts + 'fontawesome.woff2?v=4.6.3') format('woff2'),
+         url($fonts + 'fontawesome.woff?v=4.6.3') format('woff'),
+         url($fonts + 'fontawesome.ttf?v=4.6.3') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -82,11 +82,19 @@ html {
 
 body {
     font-family: 'Source Sans Pro', $sans-serif-fb;
-    font-size: 1.5em;
+    font-size: 1.4em;
     line-height: 1.7;
     font-weight: 300;
+    color: $color-01;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+    color: $color-07;
+    &:hover {
+        color: $color-01;
+    }
 }
 
 /* Headers
