--- a/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
@@ -22,7 +22,7 @@
 		display: block;
 		padding: 20px;
 		border-right: 1px solid $color-05 + #000;
-		border-left: 1px solid $color-05 - #222;
+		border-left: 1px solid $color-05 - #222;			
 		&:hover {
 			color: $color-07;
 		}		
@@ -31,6 +31,7 @@
 		border-right: 1px solid $color-05 - #222;
 		a {
 			cursor: pointer;
+			margin: 0 0 0 -1px;
 			i {
 				padding-right: 5px;
 			}
@@ -38,6 +39,7 @@
 	}	
 	.menu-main-menu-container {
 		border-left: 1px solid $color-05 + #000;
+		border-right: 1px solid $color-05 - #222;
 		.menu {
 			& > li {
 				float: left;
