Update header navigation and add search bar toggle

--- a/themusescircle/dev/themes/themusescircle/assets/scss/_mixins.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_mixins.scss
@@ -16,6 +16,12 @@
 	vertical-align: $vertical-align;
 }
 
+// Placeholder 
+@mixin placeholder {
+	color: $color-10;
+	font-style: italic;
+}
+
 // Quick reset
 @mixin reset {
 	margin: 0;
