--- a/themusescircle/dev/themes/themusescircle/assets/scss/style.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/style.scss
@@ -24,5 +24,6 @@
 // Everything else
 @import 'base';
 @import 'typography';
-@import 'fontawesome';
+@import 'font-awesome';
+@import 'form-fields';
 @import 'navigation';
