--- a/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
@@ -12,6 +12,7 @@
 
 #header-nav {
 	background: url($images + 'muses-bg.png') 0 0 repeat-x;
+	border-bottom: 1px solid $color-08;
 	.search-button, .menu-main-menu-container {
 		float: right;
 	}
@@ -29,11 +30,30 @@
 	}
 	.search-button {
 		border-right: 1px solid $color-05 - #222;
+		position: relative;
 		a {
 			cursor: pointer;
 			margin: 0 0 0 -1px;
 			i {
-				padding-right: 5px;
+				padding: 0 5px 0 0;
+			}
+		}
+		.search-header-bar {
+			position: absolute;
+			top: 64px;
+			right: 0;
+			z-index: -2;
+			opacity: 0;
+			min-width: 300px;
+			background: $color-06;
+			padding: 10px;
+			@include transition(opacity, 0.3s, ease-in-out);
+			input[type='text'] {
+				width: 100%;
+			}
+			&.show {
+				opacity: 1;
+				z-index: 1;
 			}
 		}
 	}	
@@ -41,6 +61,7 @@
 		border-left: 1px solid $color-05 + #000;
 		border-right: 1px solid $color-05 - #222;
 		.menu {
+			@include clearfix('&');
 			& > li {
 				float: left;
 				position: relative;
