--- a/themusescircle/dev/themes/themusescircle/assets/scss/_mixins.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_mixins.scss
@@ -42,9 +42,9 @@
 }
 
 // Transition
-@mixin transition($prop, $duration, $function) {
-	-webkit-transition: $prop $duration $function;	
-	-moz-transition: $prop $duration $function;	
-	-o-transition: $prop $duration $function;	
-	transition: $prop $duration $function;
+@mixin transition($value) {
+	-webkit-transition: $value;	
+	-moz-transition: $value;	
+	-o-transition: $value;	
+	transition: $value;
 }
