--- a/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
@@ -7,70 +7,104 @@
 	padding: 0;
 }
 
-/* Navigation - Header
+/* Navigation
 ========================================================================== */
 
 #header-nav {
 	background: url($images + 'muses-bg.png') 0 0 repeat-x;
 	border-bottom: 1px solid $color-08;
-	.search-button, .menu-main-menu-container {
-		float: right;
-	}
-	.menu-main-menu-container .menu > li a, .search-button a {
-		color: $color-01;
-		text-shadow: 1px 1px 0 rgba(0,0,0,0.85);
-		text-align: center;
-		display: block;
-		padding: 20px;
-		border-right: 1px solid $color-05 + #000;
-		border-left: 1px solid $color-05 - #222;			
-		&:hover {
-			color: $color-07;
-		}		
-	}
-	.search-button {
-		border-right: 1px solid $color-05 - #222;
-		position: relative;
-		a {
-			cursor: pointer;
+	.wrapper {
+		justify-content: flex-end;
+		&, .menu-container .menu {
+			@include flex(row nowrap);
+		}
+		.menu-container {			
+			&, & > ul > li {
+				@include flex(column nowrap);
+			}
+			& > ul {				
+				flex: 1;
+				a {
+					color: $color-01;
+					&:hover {
+						color: $color-07;
+					} 
+				}
+				& > li {
+					position: relative;	
+					border-right: 1px solid $color-05 + #000;
+					border-left: 1px solid $color-05 - #222;								
+					& > a {
+						margin: auto;
+						flex: 1;
+						height: 60px;
+						line-height: 60px;
+						overflow: hidden;
+						padding: 0 20px;
+						text-align: center;
+						text-shadow: 1px 1px 0 rgba(0,0,0,0.85);
+					}
+					ul, form {
+						position: absolute;
+						top: 60px;
+						left: 0;
+						background: green;
+						min-width: 250px;
+					}
+				}
+			}
+		}
+		#main-menu-container {
+			border-left: 1px solid $color-05 + #000;
+			border-right: 1px solid $color-05 - #222;
+		}
+		#search-menu-container {
+			border-right: 1px solid $color-05 - #222;
 			margin: 0 0 0 -1px;
-			i {
-				padding: 0 5px 0 0;
-			}
-		}
-		.search-header-bar {
-			position: absolute;
-			top: 64px;
-			right: 0;
-			z-index: -2;
-			opacity: 0;
-			min-width: 300px;
-			background: $color-06;
-			padding: 10px;
-			@include transition(opacity 0.3s ease-in-out);
-			input[type='text'] {
-				width: 100%;
-			}
-			&.show {
-				opacity: 1;
-				z-index: 1;
-			}
-		}
-	}	
-	.menu-main-menu-container {
-		border-left: 1px solid $color-05 + #000;
-		border-right: 1px solid $color-05 - #222;
-		.menu {
-			@include clearfix('&');
-			& > li {
-				float: left;
-				position: relative;
-			}
-			li {
-				ul {
-					display: none;
+			.search-button {
+				cursor: pointer;
+				i {
+					padding: 0 5px 0 0;
 				}
 			}
 		}
 	}
+	// .menu-main-menu-container .menu > li, .search-toggle .search-button {
+
+	// .menu-main-menu-container {
+	// 	.menu > li {
+	// 		ul {
+	// 			position: absolute;
+	// 			bottom: -48px;
+	// 			left: 0;
+	// 			min-width: 250px;
+	// 			background: #ff00ff;
+	// 			display: none;
+	// 		}
+	// 	}
+	// }
+	// .search-toggle {
+	// 	position: relative;
+	// 	.search-bar {
+	// 		position: absolute;
+	// 		bottom: -48px;
+	// 		right: 0;
+	// 		z-index: -2;
+	// 		opacity: 0;
+	// 		min-width: 300px;
+	// 		background: $color-06;
+	// 		padding: 10px;
+	// 		@include transition(opacity 0.3s ease-in-out);
+	// 		input[type='text'] {
+	// 			width: 100%;
+	// 		}
+	// 		&.show {
+	// 			opacity: 1;
+	// 			z-index: 1;
+	// 		}
+	// 	}
+	// }
+	// .search-form {
+	// 	display: none;
+	// }	
 }
