--- a/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_navigation.scss
@@ -7,13 +7,16 @@
 	padding: 0;
 }
 
-/* Navigation
+/* Navigation - Main and search menu
 ========================================================================== */
 
 #header-nav {
 	background: url($images + 'muses-bg.png') 0 0 repeat-x;
 	border-bottom: 1px solid $color-08;
+	font-size: 0.94em;
 	.wrapper {
+		position: relative;
+		z-index: 2;
 		justify-content: flex-end;
 		&, .menu-container .menu {
 			@include flex(row nowrap);
@@ -26,9 +29,6 @@
 				flex: 1;
 				a {
 					color: $color-01;
-					&:hover {
-						color: $color-07;
-					} 
 				}
 				& > li {
 					position: relative;	
@@ -43,68 +43,95 @@
 						padding: 0 20px;
 						text-align: center;
 						text-shadow: 1px 1px 0 rgba(0,0,0,0.85);
+						&:hover {
+							color: $color-07;
+						}
 					}
-					ul, form {
+					ul, .search-form {
 						position: absolute;
-						top: 60px;
-						left: 0;
-						background: green;
-						min-width: 250px;
+						top: 60px;						
+						background: $color-06;
+						padding: 10px;						
+						opacity: 0;
+						z-index: -2;
+						@include transition(opacity 0.3s ease-in-out);
+						&:before {
+							display: block;
+							content: '';
+							width: 0;
+							height: 0;
+							position: absolute;
+							top: -5px;
+							border-bottom: 5px solid $color-06;
+							border-left: 5px inset transparent;
+							border-right: 5px inset transparent;	
+						}							
 					}
-				}
-			}
-		}
-		#main-menu-container {
-			border-left: 1px solid $color-05 + #000;
-			border-right: 1px solid $color-05 - #222;
-		}
-		#search-menu-container {
-			border-right: 1px solid $color-05 - #222;
-			margin: 0 0 0 -1px;
-			.search-button {
-				cursor: pointer;
-				i {
-					padding: 0 5px 0 0;
 				}
 			}
 		}
 	}
-	// .menu-main-menu-container .menu > li, .search-toggle .search-button {
+}
 
-	// .menu-main-menu-container {
-	// 	.menu > li {
-	// 		ul {
-	// 			position: absolute;
-	// 			bottom: -48px;
-	// 			left: 0;
-	// 			min-width: 250px;
-	// 			background: #ff00ff;
-	// 			display: none;
-	// 		}
-	// 	}
-	// }
-	// .search-toggle {
-	// 	position: relative;
-	// 	.search-bar {
-	// 		position: absolute;
-	// 		bottom: -48px;
-	// 		right: 0;
-	// 		z-index: -2;
-	// 		opacity: 0;
-	// 		min-width: 300px;
-	// 		background: $color-06;
-	// 		padding: 10px;
-	// 		@include transition(opacity 0.3s ease-in-out);
-	// 		input[type='text'] {
-	// 			width: 100%;
-	// 		}
-	// 		&.show {
-	// 			opacity: 1;
-	// 			z-index: 1;
-	// 		}
-	// 	}
-	// }
-	// .search-form {
-	// 	display: none;
-	// }	
+/* Navigation - Main menu
+========================================================================== */
+
+#header-nav .wrapper #main-menu-container {
+	border-left: 1px solid $color-05 + #000;
+	border-right: 1px solid $color-05 - #222;	
+	& > ul > li {
+		ul {
+			left: 0;
+			min-width: 200px;
+			&:before {
+				left: 30px;
+			}	
+			li {			
+				a {
+					display: block;
+					margin: 0 0 5px 0;
+					&:hover {
+						color: $color-02;
+					}
+				}
+				&:last-child a {
+					margin: 0
+				}
+			}
+		}
+		&:hover ul {
+			opacity: 1;
+			z-index: 3;			
+		}
+	}
+}
+
+/* Navigation - Search menu
+========================================================================== */
+
+#header-nav .wrapper #search-menu-container {
+	border-right: 1px solid $color-05 - #222;
+	margin: 0 0 0 -1px;
+	& > ul > li {
+		.search-button {
+			cursor: pointer;
+			i {
+				padding: 0 5px 0 0;
+			}
+		}
+		.search-form {
+			right: 0;
+			min-width: 300px;
+			&:before {
+				right: 45px;
+			}			
+			&.show {
+				opacity: 1;
+				z-index: 2;	
+			}
+			input[type='text'] {
+				width: 100%;
+			}			
+		}	
+	}
 }
