--- a/themusescircle/dev/themes/themusescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_header.scss
@@ -1,4 +1,69 @@
-/* Header
+/* Header - Top Bar
+========================================================================== */
+
+#top-bar {
+	background: $color-03;
+	padding: 10px 0;
+	box-shadow: inset 0px -4px 6px rgba(0,0,0,0.40);
+	.wrapper {
+		@include flex(row nowrap);
+		align-items: center;
+		.social-media, .search-bar {
+			flex: 1;
+		}
+		.social-media {
+			margin: 0 -4px;
+			a {
+				&, .custom-icon {
+					display: inline-block;
+				}
+				vertical-align: middle;
+				padding: 0 4px;
+				.fa, .custom-icon {
+					@include transition(all 0.3s ease-in-out);
+				}
+				.fa {
+					color: $color-06;
+					font-size: 1.34em;
+				}
+				.custom-icon {
+					height: 20px;
+					position: relative;
+					top: 3px;
+					background-position: center center;
+					background-repeat: no-repeat;
+					&.goodreads {
+						width: 14px;
+						background-image: url($images + 'gr-icon-small-pink.png');
+					}
+					&.library-thing {
+						width: 21px;
+						background-image: url($images + 'lt-icon-small-pink.png');
+					}										
+				}
+				&:hover {
+					.fa {
+						color: $color-01;
+					}
+					.custom-icon {
+						&.goodreads {
+							background-image: url($images + 'gr-icon-small-white.png');
+						}
+						&.library-thing {
+							background-image: url($images + 'lt-icon-small-white.png');
+						}										
+					}
+				}
+			}
+		}
+		.search-bar {
+			font-size: 0.94em;
+			text-align: right;
+		}
+	}
+}
+
+/* Header - Main
 ========================================================================== */
 
 #header {
