Conditionals on top bar, finish navigation

--- a/themusescircle/dev/themes/themusescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_header.scss
@@ -1,4 +1,4 @@
-/* Header - Top Bar
+/* Header - Top bar
 ========================================================================== */
 
 #top-bar {
@@ -11,54 +11,69 @@
 		.social-media, .search-bar {
 			flex: 1;
 		}
-		.social-media {
-			margin: 0 -4px;
-			a {
-				&, .custom-icon {
-					display: inline-block;
+	}
+}
+
+/* Header - Social media
+========================================================================== */
+
+#top-bar .wrapper .social-media {
+	margin: 0 -4px;
+	a {
+		&, .custom-icon {
+			display: inline-block;
+		}
+		vertical-align: middle;
+		padding: 0 4px;
+		.fa, .custom-icon {
+			@include transition(all 0.3s ease-in-out);
+		}
+		.fa {
+			color: $color-06;
+			font-size: 1.34em;
+		}
+		.custom-icon {
+			height: 20px;
+			position: relative;
+			top: 3px;
+			background-position: center center;
+			background-repeat: no-repeat;
+			&.goodreads {
+				width: 14px;
+				background-image: url($images + 'gr-icon-small-pink.png');
+			}
+			&.library-thing {
+				width: 21px;
+				background-image: url($images + 'lt-icon-small-pink.png');
+			}										
+		}
+		&:hover {
+			.fa {
+				color: $color-01;
+			}
+			.custom-icon {
+				&.goodreads {
+					background-image: url($images + 'gr-icon-small-white.png');
 				}
-				vertical-align: middle;
-				padding: 0 4px;
-				.fa, .custom-icon {
-					@include transition(all 0.3s ease-in-out);
-				}
-				.fa {
-					color: $color-06;
-					font-size: 1.34em;
-				}
-				.custom-icon {
-					height: 20px;
-					position: relative;
-					top: 3px;
-					background-position: center center;
-					background-repeat: no-repeat;
-					&.goodreads {
-						width: 14px;
-						background-image: url($images + 'gr-icon-small-pink.png');
-					}
-					&.library-thing {
-						width: 21px;
-						background-image: url($images + 'lt-icon-small-pink.png');
-					}										
-				}
-				&:hover {
-					.fa {
-						color: $color-01;
-					}
-					.custom-icon {
-						&.goodreads {
-							background-image: url($images + 'gr-icon-small-white.png');
-						}
-						&.library-thing {
-							background-image: url($images + 'lt-icon-small-white.png');
-						}										
-					}
-				}
+				&.library-thing {
+					background-image: url($images + 'lt-icon-small-white.png');
+				}										
 			}
 		}
-		.search-bar {
-			font-size: 0.94em;
-			text-align: right;
+	}
+}
+
+/* Header - Search bar
+========================================================================== */
+
+#top-bar .wrapper .search-bar {
+	font-size: 0.94em;
+	text-align: right;
+	.search-form {
+		input[type='text'] {
+			margin: 0 4px 0 0;
+			width: 65%;
+			max-width: 450px;
 		}
 	}
 }
@@ -74,7 +89,6 @@
 		height: 440px;
 		position: relative;
 		top: -60px;
-		z-index: 1;
 		.header-content {
 			height: 100%;
 			@include flex(column nowrap);
