--- a/themusescircle/dev/themes/themusescircle/assets/scss/_form-fields.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/_form-fields.scss
@@ -14,9 +14,26 @@
 	@include placeholder;	
 }
 
-input[type='text'] {
+input[type='text'], input[type='button'], input[type='reset'], input[type='submit'], button, .button {
+	line-height: 35px;
+	height: 35px;
 	border: 0;
-	padding: 10px;
+}
+
+input[type='text'] {
 	color: $color-09;
 	font-weight: normal;
+	padding: 0 10px;
+}
+
+input[type='button'], input[type='reset'], input[type='submit'], button, .button {
+	background: $color-05;
+	border-bottom: 3px solid $color-06;
+	color: #fff;
+	padding: 0 20px;
+	text-transform: uppercase;
+	@include transition(background 0.3s ease-in-out);
+	&:hover {
+		background: $color-06;
+	}
 }
