--- a/themusescircle/dev/themes/themusescircle/assets/scss/style.scss
+++ b/themusescircle/dev/themes/themusescircle/assets/scss/style.scss
@@ -25,6 +25,7 @@
 @import 'base';
 @import 'typography';
 @import 'font-awesome';
+@import 'owl-carousel';
 @import 'form-fields';
 @import 'navigation';
 @import 'header';
