--- a/themusescircle/dev/themes/musescircle/assets/scss/_navigation.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_navigation.scss
@@ -17,7 +17,7 @@
 	font-size: 0.94em;
 	.wrapper {
 		text-align: right;
-		.menu-main-menu-container {	
+		.menu-main-container {	
 			display: inline-block;
 			position: relative;
 			z-index: 2;
