Fix blog urls, styling on svgs, added transform on toggle arrow

--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -31,7 +31,9 @@
 				display: block;
 			}
 			.social-icon {
-				@include sizing(auto, 25px);
+				@include sizing(auto, 20px);
+				min-width: 22px;
+				text-align: center;
 				svg {
 					fill: currentColor;
 					height: 100%;
