--- a/themusescircle/dev/themes/musescircle/assets/scss/_navigation.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_navigation.scss
@@ -19,6 +19,7 @@
 		text-align: right;
 		.menu-main-container {	
 			display: inline-block;
+			vertical-align: middle;
 			position: relative;
 			z-index: 2;
 			a {
@@ -53,11 +54,17 @@
 							padding: 0 5px 0 20px;
 						}
 						.toggle-submenu {
-							padding: 0 20px 0 5px;
-							@include sizing(40px, auto);
+							margin: 0 20px 0 5px;
+							width: 15px;
+							@include sizing(15px, auto);
 							fill: currentColor;
 							cursor: pointer;
 							@include transition(color 0.3s ease-in-out);
+							@include transition(transform 0.8s ease-in-out);
+						  	transform: rotate(0deg);							
+							&.show {
+								transform: rotate(180deg);
+							}
 						}
 					}
 					.sub-menu {
@@ -69,7 +76,7 @@
 						background: $color-06;
 						padding: 10px;						
 						opacity: 0;
-						@include transition(opacity 0.3s ease-in-out);
+						@include transition(opacity 0.5s ease-in-out);
 						text-align: left;
 						&.show {
 							opacity: 1;
