--- a/themusescircle/dev/themes/musescircle/assets/scss/_navigation.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_navigation.scss
@@ -14,7 +14,7 @@
 	background: url($images + 'muses-bg.png') 0 0 repeat-x;
 	border-top: 1px solid $color-05 + #000;
 	border-bottom: 1px solid $color-08;
-	font-size: 0.94em;
+	@include font-size(14px);
 	.wrapper {
 		text-align: right;
 		.menu-main-container {	
