--- a/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
@@ -68,12 +68,12 @@
 ========================================================================== */
 
 html {
-    font-size: 62.5%;
+    font-size: 100%;
 }
 
 body {
     font-family: 'Source Sans Pro', $sans-serif-fb;
-    font-size: 1.5em;
+    @include font-size(16px);
     line-height: 1.7;
     font-weight: 300;
     color: $color-01;
@@ -102,17 +102,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 3.5em;
+    @include font-size(50px);
 }
 
 h2 {
-    font-size: 3.2em;
+    @include font-size(45px);
 }
 
 h3 {
-    font-size: 2.7em;
+    @include font-size(40px);
 }
 
-h4, h5, h6 {
-    font-size: 2.2em;
+h4 {
+    @include font-size(35px);
+}
+
+h5, h6 {
+    @include font-size(30px);
 }
