Add review button section styles and other changes

--- a/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
@@ -7,7 +7,7 @@
 		&:nth-child(even) {
 			background: $color-03;
 		}
-		h2 {
+		h2, h3 {
 			text-align: center;
 		}
 	}
@@ -46,12 +46,12 @@
 			background: $color-06;
 			padding: 10px;
 			text-align: center;
-			svg {
+			.icon {
 				@include sizing(auto, 100%);
 				fill: $color-01;
 				@include transition(fill 0.3s ease-in-out);				
 			}
-			&:hover svg {
+			&:hover .icon {
 				fill: $color-05;
 			}			
 		}
@@ -60,6 +60,86 @@
 		}
 		.owl-next {
 			right: 0;
+		}
+	}
+}
+
+/* Front page - Review Buttons
+========================================================================== */
+
+#front-page-sections #review-buttons {
+	.wrapper {
+		@include flex(row wrap);
+		justify-content: center;
+	}
+	h3 {
+		flex: 1 1 100%;
+		@include font-size(18px);
+		font-family: $font-01;
+	}
+	a {		
+		flex: 1;
+		max-width: 200px;
+		margin: 0 10px;
+		border: 1px solid $color-01;
+		padding: 8px 10px;
+		text-align: center;
+		@include font-size(14px);
+		text-transform: uppercase;
+		color: $color-01;
+		.icon, .button-text {
+			@include inline-block(middle);
+		}
+		.icon {
+			height: 20px;
+			margin: -2px 10px 0 0;
+			fill: currentColor;
+		}
+		&:hover {
+			@include transition(all 0.3s ease-in-out);
+			border: 1px solid $color-07;
+			color: $color-07;
+			.icon {
+				fill: currentColor;
+			}
+		}
+	}
+}
+
+/* Front page - From the Blog
+========================================================================== */
+
+#front-page-sections #from-the-blog .entry-multiple {
+	@include flex(row wrap);
+	.entry {
+		flex: 1 1 50%;
+		.entry-header h3, .entry-meta {
+			margin: 0 0 10px 0;
+		}
+		.entry-header h3 {
+			text-align: left;
+			font-family: $font-01;
+			@include font-size(18px);
+			a {
+				color: $color-07;
+				&:hover {
+					color: $color-01;
+				}
+			}
+		}
+		.entry-meta {
+			.author, .bullet, .date {
+				@include inline-block(middle);
+			}
+			.author, .date {
+				margin: 0;
+			}
+			.bullet {
+				margin: 0 5px;
+			}
+		}
+		.entry-thumbnail {
+			max-width: 200px;
 		}
 	}
 }
