--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -34,7 +34,7 @@
 				@include sizing(auto, 20px);
 				min-width: 22px;
 				text-align: center;
-				svg {
+				.icon {
 					fill: currentColor;
 					height: 100%;
 				}
