--- a/themusescircle/dev/themes/musescircle/assets/scss/_recent-reviews.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_recent-reviews.scss
@@ -54,7 +54,7 @@
 			}
 			.main-title, .sub-title {
 				display: block;
-				font-family: 'Source Sans Pro';
+				font-family: $font-01;
 				font-weight: 300;
 			}
 			.main-title {
