--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -24,3 +24,5 @@ $color-10: #999999; // gray
 
 $serif-fb: garamond, times new roman, serif;
 $sans-serif-fb: arial, sans-serif;
+$font-01: 'Source Sans Pro', $sans-serif-fb;
+$font-02: 'Qwigley', $serif-fb;
