--- a/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
@@ -72,7 +72,7 @@ html {
 }
 
 body {
-    font-family: 'Source Sans Pro', $sans-serif-fb;
+    font-family: $font-01;
     @include font-size(15px);
     line-height: 1.5;
     font-weight: 300;
@@ -83,6 +83,8 @@ body {
 
 a {
     color: $color-07;
+    @include transition(color 0.3s ease-in-out);
+    text-decoration: none;
     &:hover {
         color: $color-01;
     }
@@ -96,9 +98,18 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Qwigley', $serif-fb;  
+    font-family: $font-02;  
     font-weight: normal;  
     line-height: 1.1;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    a {
+        color: $color-01;
+        &:hover {
+            color: $color-07
+        }
+    }
 }
 
 h1 {
