Added some css and moved post/entry structure around for better formatting

--- a/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
@@ -7,7 +7,7 @@
 		&:nth-child(even) {
 			background: $color-03;
 		}
-		h2, h3 {
+		.wrapper > h2, .wrapper > h3 {
 			text-align: center;
 		}
 	}
@@ -102,44 +102,6 @@
 			.icon {
 				fill: currentColor;
 			}
-		}
-	}
-}
-
-/* Front page - From the Blog
-========================================================================== */
-
-#front-page-sections #from-the-blog .entry-multiple {
-	@include flex(row wrap);
-	.entry {
-		flex: 1 1 50%;
-		.entry-header h3, .entry-meta {
-			margin: 0 0 10px 0;
-		}
-		.entry-header h3 {
-			text-align: left;
-			font-family: $font-01;
-			@include font-size(18px);
-			a {
-				color: $color-07;
-				&:hover {
-					color: $color-01;
-				}
-			}
-		}
-		.entry-meta {
-			.author, .bullet, .date {
-				@include inline-block(middle);
-			}
-			.author, .date {
-				margin: 0;
-			}
-			.bullet {
-				margin: 0 5px;
-			}
-		}
-		.entry-thumbnail {
-			max-width: 200px;
 		}
 	}
 }
