Style review/post thumbnail for archive pages

--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -18,6 +18,7 @@ $color-07: #b24b8f; // light pink
 $color-08: #2b1b3b; // light purple
 $color-09: #333333; // blackish
 $color-10: #999999; // gray
+$color-11: #bbbbbb; // gray
 
 /* Fonts
 ========================================================================== */
