--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -47,17 +47,28 @@
 ========================================================================== */
 
 .thumbnail-extend {
-	flex: 1;
 	max-width: 180px;
-	margin: 0 20px 0 0;
+	overflow: hidden;
 	border: 5px solid $color-06;
-	line-height: 0;		
+	.image-wrap {
+		width: 100%;
+		height: 0;
+		padding: 0 0 percentage(260 / 180) 0;
+		&.default-image {
+			background: $color-11;
+		}
+		svg {
+			@include sizing(180px, 280px);
+		}
+	}
 }
 
 /* Entry - Multiple (aka Archives) - Posts
 ========================================================================== */
 
 .entry-multiple .entry.post .entry-thumbnail {
+	flex: 0 1 auto;
+	margin: 0 20px 0 0;
 	@extend .thumbnail-extend;
 } 
 
@@ -66,7 +77,11 @@
 
 .entry-multiple .entry.insprvw-review {
 	.entry-item-reviewed {
-		@extend .thumbnail-extend;
+		flex: 0 1 auto;
+		margin: 0 20px 0 0;
+		.entry-thumbnail {
+			@extend .thumbnail-extend;
+		}
 	}
 	.entry-wrapper .entry-meta .rating {
 		@include inline-block(middle);
