--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -43,22 +43,21 @@
 	}	
 }
 
-/* Entry - Multiple (aka Archives) - Thumnail Extend
+/* Entry - Multiple (aka Archives) - Flex & Thumbnail Extend
 ========================================================================== */
 
+.flex-extend {
+	flex: 0 0 180px;
+	margin: 0 20px 0 0;	
+}
+
 .thumbnail-extend {
-	max-width: 180px;
-	overflow: hidden;
-	border: 5px solid $color-06;
 	.image-wrap {
-		width: 100%;
-		height: 0;
-		padding: 0 0 percentage(260 / 180) 0;
-		&.default-image {
-			background: $color-11;
-		}
-		svg {
-			@include sizing(180px, 280px);
+		line-height: 0;
+		border: 5px solid $color-06;
+		overflow: hidden;
+		img {
+			width: 100%;
 		}
 	}
 }
@@ -67,8 +66,7 @@
 ========================================================================== */
 
 .entry-multiple .entry.post .entry-thumbnail {
-	flex: 0 1 auto;
-	margin: 0 20px 0 0;
+	@extend .flex-extend;
 	@extend .thumbnail-extend;
 } 
 
@@ -77,13 +75,9 @@
 
 .entry-multiple .entry.insprvw-review {
 	.entry-item-reviewed {
-		flex: 0 1 auto;
-		margin: 0 20px 0 0;
+		@extend .flex-extend;
 		.entry-thumbnail {
 			@extend .thumbnail-extend;
 		}
-	}
-	.entry-wrapper .entry-meta .rating {
-		@include inline-block(middle);
 	}
 }
