--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -13,31 +13,31 @@
 		margin: 0 0 30px 0;
 		.entry-wrapper {
 			flex: 1;
-			.entry-header h3, .entry-content > p {
-				margin: 0 0 5px 0;
-			}
-			.entry-header h3 {
-				@include font-size(18px);
-				font-family: $font-01;
-				line-height: inherit;
-				a {
-					color: $color-07;
-					&:hover {
-						color: $color-01;
-					}
+		}
+		.entry-header h3, .entry-content > p {
+			margin: 0 0 5px 0;
+		}
+		.entry-header h3 {
+			@include font-size(18px);
+			font-family: $font-01;
+			line-height: inherit;
+			a {
+				color: $color-07;
+				&:hover {
+					color: $color-01;
 				}
 			}
-			.entry-meta {
-				margin: 0 0 8px 0;
-				.author, .date, .bullet {
-					@include inline-block(middle);
-				}
-				.author, .date, .categories {
-					margin: 0 0 2px 0;
-				}
-				.bullet {
-					margin: 0 5px 2px 5px;
-				}
+		}
+		.entry-meta {
+			margin: 0 0 8px 0;
+			.author, .date, .bullet {
+				@include inline-block(middle);
+			}
+			.author, .date, .categories {
+				margin: 0 0 2px 0;
+			}
+			.bullet {
+				margin: 0 5px 2px 5px;
 			}
 		}
 	}	
@@ -80,8 +80,37 @@
 			@extend .thumbnail-extend;
 		}
 	}
-	.entry-wrapper .entry-meta .rating {
-		@include inline-block(middle);
+	.entry-meta .rating {		
 		margin: 0 0 2px 0;
+		&, strong, .rating-out-of, .rating-value {
+			@include inline-block(middle);
+		}
+		.rating-out-of {
+			position: relative;
+			line-height: 0;
+			margin: 0 0 0 2px;
+			background: $color-04;
+			.icon-star {
+				@include sizing(15px, auto);
+				margin: 0 1px;
+			}
+			& > .icon-star {
+				fill: $color-01;				
+			}
+			.rating-value {
+				overflow: hidden;
+				position: absolute;
+				top: 0;
+				left: 0;	
+				white-space: nowrap;
+				overflow: hidden;
+				background: inherit;							
+				.icon-star {
+					fill: $color-07;
+					stroke: $color-06;
+					stroke-width: 2;
+				}				
+			}			
+		}
 	}
 }
