--- a/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
@@ -33,3 +33,15 @@ img {
 	width: auto;
 	padding: 0 20px;
 }
+
+/* Layout
+========================================================================== */
+
+.row {
+	@include flex(row nowrap);
+	margin: 0 -20px;
+	.column {
+		flex: 1;
+		padding: 0 20px;
+	}
+}
