--- a/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
@@ -14,7 +14,7 @@
 	@include placeholder;	
 }
 
-input[type='text'], input[type='button'], input[type='reset'], input[type='submit'], button, .button {
+input[type='text'], input[type='button'], input[type='reset'], input[type='submit'], button, .button, .insprvw-recent-reviews .review .read-more a, #about-site .read-more a {
 	line-height: 35px;
 	height: 35px;
 	border: 0;
@@ -26,7 +26,7 @@ input[type='text'] {
 	padding: 0 10px;
 }
 
-input[type='button'], input[type='reset'], input[type='submit'], button, .button {
+input[type='button'], input[type='reset'], input[type='submit'], button, .button, .insprvw-recent-reviews .review .read-more a, #about-site .read-more a {
 	background: $color-05;
 	border-bottom: 3px solid $color-06;
 	color: #fff;
@@ -39,6 +39,6 @@ input[type='button'], input[type='reset'], input[type='submit'], button, .button
 	}
 }
 
-a.button {
+a.button, .insprvw-recent-reviews .review .read-more a, #about-site .read-more a {
 	@include inline-block(middle);
 }
