--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -8,16 +8,16 @@
 	.wrapper {
 		@include flex(row nowrap);
 		align-items: center;
-		.menu-social-container, .search-bar {
-			flex: 1;
-		}
 	}
+	.menu-social-container, .search-bar {
+		flex: 1;
+	}	
 }
 
 /* Header - Social media
 ========================================================================== */
 
-#top-bar .wrapper .menu-social-container ul {
+#top-bar .menu-social-container ul {
 	margin: 0 -3px;
 	li {
 		@include inline-block(middle);
@@ -50,14 +50,25 @@
 /* Header - Search bar
 ========================================================================== */
 
-#top-bar .wrapper .search-bar {
+#top-bar .search-bar {
 	@include font-size(14px);
 	text-align: right;
 	.search-form {
+		position: relative;
 		input[type='text'] {
-			margin: 0 4px 0 0;
-			width: 65%;
+			@include sizing(75%, 39px);
+			line-height: 39px;
 			max-width: 450px;
+			padding: 0 110px 0 10px;
+			border: 1px solid $color-07;
+		}
+		input[type='submit'] {
+			position: absolute;
+			right: 2px;
+			top: 2px;
+			z-index: 2;
+			width: 100px;
+			padding: 0 10px;
 		}
 	}
 }
@@ -75,19 +86,19 @@
 		position: relative;
 		top: -60px;
 		left: 0;
-		.header-content {
-			height: 100%;
-			@include flex(column nowrap);
-			justify-content: center;
-			align-items: flex-end;
-			.site-name {
-				@include font-size(80px);
-				line-height: 0.75;
-				margin: 0;
-			}
-			.site-description {
-				@include font-size(18px);
-			}
+	}
+	.header-content {
+		height: 100%;
+		@include flex(column nowrap);
+		justify-content: center;
+		align-items: flex-end;
+		.site-name {
+			@include font-size(80px);
+			line-height: 0.75;
+			margin: 0;
+		}
+		.site-description {
+			@include font-size(18px);
 		}
 	}
 }
