--- a/themusescircle/dev/themes/musescircle/assets/scss/_footer.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_footer.scss
@@ -6,8 +6,28 @@
 	border-top: 1px solid $color-05 + #000;
 	padding: 30px 0;
 	.row .column {
-	}
-	.menu-main-container ul, .menu-main-container ul li {
-		list-style: none;
+		h4 {
+			margin: 0 0 10px 0;
+		}
+		.menu-footer-container {
+			@include font-size(16px);
+			.menu {
+				@include flex(row wrap);
+				& > li {
+					flex: 1 1 50%;
+					& > a {
+						display: block;
+						color: $color-01;
+						padding: 0 0 5px 0;
+						&:hover {
+							color: $color-07;
+						}
+					}
+					&.menu-item-has-children .sub-menu {
+						display: none;
+					}
+				}
+			}
+		}
 	}
 }
