--- a/themusescircle/dev/themes/musescircle/assets/scss/_mixins.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_mixins.scss
@@ -15,6 +15,26 @@
 	vertical-align: $vertical-align;
 }
 
+@mixin inline-form($tw, $mw, $sw) {
+	position: relative;
+	input[type='text'] {
+		@include sizing($tw, 39px);
+		line-height: 39px;
+		max-width: $mw;
+		padding: 0 ($sw + 10) 0 10px;
+		border: 1px solid $color-07;
+		@include font-size(14px);
+	}
+	input[type='submit'] {
+		position: absolute;
+		right: 2px;
+		top: 2px;
+		z-index: 2;
+		width: $sw;
+		padding: 0 10px;
+	}	
+}
+
 // Placeholder 
 @mixin placeholder {
 	color: $color-10;
