--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -57,7 +57,7 @@
 	}
 }
 
-/* Header
+/* Header - Front Page
 ========================================================================== */
 
 #header {
@@ -84,6 +84,25 @@
 		.site-description {
 			@include font-size(18px);
 		}
+	}
+}
+
+/* Header - Main Title
+========================================================================== */
+
+header.main-title {
+	background: $color-03;
+	height: 270px;
+	margin: 0 0 30px 0;
+	.wrapper {
+		background: url($images + 'muses-forest.png') left center no-repeat;
+		height: 100%;
+	}
+	h1 {
+		height: 100%;
+		@include flex(column nowrap);
+		justify-content: center;
+		@include font-size(60px);
 	}
 }
 
