--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -19,6 +19,8 @@ $color-08: #2b1b3b; // light purple
 $color-09: #333333; // blackish
 $color-10: #999999; // gray
 $color-11: #bbbbbb; // gray
+$color-12: rgba(255,255,255,0.06); // transparentish
+$color-13: rgba(255,255,255,0.80); // transparentish
 
 /* Fonts
 ========================================================================== */
