--- a/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
@@ -1,17 +1,18 @@
 /* Form fields
 ========================================================================== */
 
-::-webkit-input-placeholder {
-	@include placeholder;
+@include placeholder {
+	color: $color-13;
+	font-style: italic;
+	@include transition(color 0.3s ease-in-out);
 }
-::-moz-placeholder {
-	@include placeholder;	
-}
-:-ms-input-placeholder {
-	@include placeholder;	
-}
-:-moz-placeholder {
-	@include placeholder;	
+
+:focus{@include placeholder {
+	color: $color-01;
+}}
+
+input[type='text'], input[type='button'], input[type='reset'], input[type='submit'], button, textarea {
+	outline: 0;
 }
 
 input[type='text'], input[type='button'], input[type='reset'], input[type='submit'], button, .button, .insprvw-recent-reviews .review .read-more a, #about-site .read-more a {
@@ -21,15 +22,23 @@ input[type='text'], input[type='button'], input[type='reset'], input[type='submi
 }
 
 input[type='text'] {
-	color: $color-09;
-	font-weight: normal;
+	background: $color-12;
+	border-radius: 4px;
+	color: $color-01;
+}
+
+input[type='text'] {
 	padding: 0 10px;
+}
+
+textarea {
+	padding: 10px;
 }
 
 input[type='button'], input[type='reset'], input[type='submit'], button, .button, .insprvw-recent-reviews .review .read-more a, #about-site .read-more a {
 	background: $color-05;
 	border-bottom: 3px solid $color-06;
-	color: #fff;
+	color: $color-01;
 	padding: 0 30px;
 	text-transform: uppercase;
 	@include transition(background 0.3s ease-in-out);
@@ -41,4 +50,14 @@ input[type='button'], input[type='reset'], input[type='submit'], button, .button
 
 a.button, .insprvw-recent-reviews .review .read-more a, #about-site .read-more a {
 	@include inline-block(middle);
+}
+
+.inline-button {
+	&, &:hover {
+		background: none;
+	}
+	border: none;
+	line-height: normal;
+	@include sizing(auto, auto);
+	padding: 0;
 }
