--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -35,8 +35,12 @@
 				min-width: 22px;
 				text-align: center;
 				.icon {
-					fill: currentColor;
+					fill: $color-13;
 					height: 100%;
+					@include transition(fill 0.3s ease-in-out);
+				}
+				&:hover .icon {
+					fill: $color-01;
 				}
 			}
 			.social-text {
@@ -53,7 +57,29 @@
 #top-bar .search-bar {	
 	text-align: right;
 	.search-form {
-		@include inline-form(75%, 450px, 100px);
+		position: relative;
+		input[type='text'] {
+			@include sizing(50%, 30px);
+			line-height: 30px;
+			@include font-size(14px);
+			padding: 0 35px 0 10px;
+			&:focus ~ button svg {
+				fill: $color-01;				
+			}
+		}
+		button {
+			position: absolute;
+			right: 10px;
+			top: 6px;
+			svg {
+				@include sizing(auto, 16px);
+				fill: $color-13;
+				@include transition(fill 0.3s ease-in-out);
+				&:hover {
+					fill: $color-01;
+				}
+			}
+		}
 	}
 }
 
@@ -65,7 +91,7 @@
 	height: 320px;
 	margin: 0 0 30px 0;
 	.wrapper {
-		background: url($images + 'muses-header.png') left center no-repeat;
+		background: url($images + 'muses-header.png') -30px center no-repeat;
 		height: 440px;
 		position: relative;
 		top: -60px;
