Style changes for two column layout

--- a/themusescircle/dev/themes/musescircle/assets/scss/style.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/style.scss
@@ -24,6 +24,7 @@
 // Everything else
 @import 'base';
 @import 'typography';
+@import 'layout';
 @import 'owl-carousel';
 @import 'form-fields';
 @import 'header';
